--- a/Client/package.json
+++ b/Client/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
+    "html-to-image": "^1.11.13",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
