--- a/Client/package.json
+++ b/Client/package.json
@@ -14,7 +14,9 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
+    "framer-motion": "^12.23.22",
     "html-to-image": "^1.11.13",
+    "lucide-react": "^0.544.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
